# mnemotree

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pre-commit.yaml  pyproject.toml  requirements.txt  run_streamlit_example.sh  setup.py  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
benchmarks/: README.md  compare_results.py  docker-compose.yml  eval_chroma_sqlite_graph_ner_rrf.py  eval_chroma_sqlite_graph_ner_rrf_bm25.py  eval_memory_baseline.py  eval_memory_full.py  evaluate.py  run_ablation.sh
benchmarks/data/: entity_queries.jsonl  memories.jsonl  test_queries.jsonl
benchmarks/results/: evaluation_results-full_neo4j.json  evaluation_results_baseline_neo4j.json
ci/: github-actions-ci.yml  run.sh
docker/chromadb/: docker-compose.yml
docker/mcp/: Dockerfile  docker-compose.yml
docker/milvus/: docker-compose.yml
docker/neo4j/: docker-compose.yml
docker/pgvector/: docker-compose.yml
docker/pinecone-local/: docker-compose.yml
docker/qdrant/: docker-compose.yml
examples/: advanced_memory_demo.py  quick_start_advanced.py
examples/agents/: langchain_agent.py
examples/memory_chat/: app.py  chat_ui.py  inference.py  message_types.py  types.py
src/: __init__.py
src/adapters/langchain/: __init__.py  memory.py  retriever.py
src/analysis/: analyzers.py  base.py  clustering.py  memory_analyzer.py  models.py  summarizer.py
src/core/: memory.py  models.py  query.py  scoring.py
src/inference/: langchain_inference.py
src/memory/: models.py  processor.py
src/mnemotree/: __init__.py  cli.py  configs.py  errors.py
src/mnemotree/adapters/langchain/: __init__.py  memory.py  retriever.py
src/mnemotree/analysis/: analyzers.py  base.py  clustering.py  keywords.py  memory_analyzer.py  models.py  summarizer.py
src/mnemotree/core/: __init__.py  builder.py  engine.py  hybrid_retrieval.py  memory.py  models.py  models_v2.py  protocols.py  query.py  retrieval.py  retriever_factory.py  scoring.py
src/mnemotree/core/_internal/: enrichment.py  indexing.py  ingestion_queue.py  persistence.py  scoring.py
src/mnemotree/embeddings/: local.py
src/mnemotree/experimental/: __init__.py  adaptive_decay.py  consolidation.py  evaluation.py  truth_maintenance.py  write_gate.py
src/mnemotree/experimental/lsp/: __init__.py  client.py  manager.py  protocol.py
src/mnemotree/mcp/: server.py
src/mnemotree/ner/: __init__.py  base.py  composite.py  gliner.py  hf_transformers.py  llm.py  spacy.py  spark_nlp.py  stanza.py
src/mnemotree/rerankers/: __init__.py  base.py  cross_encoder.py  flashrank.py
src/mnemotree/store/: __init__.py  _filters.py  _queries.py  _records.py  _schema.py  base.py  chroma_utils.py  chromadb_store.py  logging.py  milvus_store.py  neo4j_store.py  protocols.py  query_builders.py  serialization.py  sqlite_graph.py  sqlite_vec_store.py
src/mnemotree/store/baseline/: chromadb_store.py  neo4j_store.py
src/mnemotree/tools/: autogen.py  langchain.py
src/mnemotree/utils/: memory_formatter.py  serialization.py
src/ner/: base.py  composite.py  llm.py  spacy.py
src/retrievers/: retriever.py
src/store/: base.py  chromadb_store.py  milvus_store.py  neo4j_store.py
src/store/baseline/: chromadb_store.py  neo4j_store.py
src/tools/: autogen.py  langchain.py
src/ui/: chat_ui.py  types.py
src/utils/: memory_formatter.py
tests/: conftest.py  test_cli.py  test_configs.py  test_errors.py  test_lsp.py
tests/adapters/: test_langchain_adapters.py
tests/core/: test_builder.py  test_memory_core.py  test_memory_core_characterization.py  test_memory_core_extended.py  test_memory_core_helpers.py  test_models.py  test_models_extended.py  test_query.py  test_retrieval.py  test_retrieval_pipeline.py  test_scoring.py
tests/embeddings/: test_cache.py  test_local_embeddings.py
tests/experimental/: __init__.py  test_evaluation.py  test_write_gate.py
tests/integration/: test_benchmarks_e2e.py
tests/mcp/: test_server.py
tests/ner/: test_imports.py  test_ner_backends.py
tests/rerankers/: test_cross_encoder.py  test_flashrank.py  test_rerankers.py
tests/store/: test_filters.py  test_query_builders.py  test_serialization.py  test_sqlite_graph_index.py  test_sqlite_vec_store.py  test_store_contracts.py  test_stores.py
tests/tools/: test_autogen.py  test_langchain_tool.py
