[project]
name = "mnemotree"
version = "0.3.0"
description = "Advanced memory management and retrieval system for AI Agents"
authors = [
    { name = "kurcontko", email = "mikeqrc@gmail.com" }
]
dependencies = [
    # Core
    "pydantic>=2.0.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "networkx>=3.4.0,<4.0.0",
    "spacy>=3.8.0,<4.0.0",
    "urllib3>=2.6.0,<3.0.0",
    
    # Langchain
    "langchain>=0.3.7,<0.4.0",
    "langchain-openai>=0.2.14,<0.3.0",
    "langchain-community>=0.3.7,<0.4.0",
    "langchain-core>=0.3.19,<0.4.0",

    # Llama-index
    #"llama-index>=0.12.0,<0.13.0",
    
    # LLMs
    "openai>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "aiofiles>=24.1.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "pyright>=1.1.330",
]

# NER backends
ner_gliner = ["gliner>=0.2.0"]
ner_hf = [
    "transformers>=4.38.0",
    "torch>=2.0.0",
]
ner_stanza = ["stanza>=1.7.0"]
ner_spark = [
    "pyspark>=3.4.0",
    "spark-nlp>=5.0.0",
]

# Database backends
neo4j = ["neo4j>=5.26.0"]
milvus = ["pymilvus>=2.5.0"]
chroma = ["chromadb>=0.5.23"]
sqlite_vec = ["sqlite-vec>=0.1.0"]

# Combined sets
vectors = [
    "chromadb>=0.5.23",
    "pymilvus>=2.2.0",
    "sqlite-vec>=0.1.0",
]

# Local embeddings
lite = [
    "sentence-transformers>=2.7.0"
]

# Rerankers
rerank_flashrank = [
    "flashrank>=0.2.0"
]

# Keyword extraction
keywords = [
    "yake>=0.4.8"
]

# UI components
ui = ["streamlit>=1.40.0"]

# MCP server
mcp = ["fastmcp<3"]
mcp_server = [
    "chromadb>=0.5.23",
    "fastmcp<3",
    "sentence-transformers>=2.7.0",
]

# Other llms providers
google = [
    "langchain-google-genai>=2.0.7"
]
anthropic = [
    "langchain-anthropic>=0.3.0"
]
aws = [
    "langchain-aws>=0.2.0"
]
huggingface = [
    "langchain-huggingface>=0.1.0"
]

all = [
    "neo4j>=5.26.0",
    "chromadb>=0.5.23",
    "pymilvus>=2.2.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.7.0",
    "yake>=0.4.8",
    "streamlit>=1.40.0",
    "fastmcp<3",
    "langchain-google-genai>=2.0.7",
    "langchain-anthropic>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-huggingface>=0.1.0"
]

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/kurcontko/mnemotree"
#Documentation = "https://mnemotree.readthedocs.io" 
Repository = "https://github.com/kurcontko/mnemotree.git"
Issues = "https://github.com/kurcontko/mnemotree/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mnemotree"]
include = ["src/mnemotree/py.typed"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -W error --cov=mnemotree --cov-report=term-missing"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end/integration smoke tests (may be slower than unit tests)",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4", "PIE"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["mnemotree"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = [
    "src/mnemotree/core",
    "src/mnemotree/store/protocols.py",
    "src/mnemotree/store/__init__.py",
    "src/mnemotree/tools",
    "src/mnemotree/mcp/server.py",
    "src/mnemotree/configs.py",
]
mypy_path = "src"
exclude = "^src/mnemotree/core/new/"
follow_imports = "skip"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "chromadb.*",
    "pymilvus.*",
    "qdrant_client.*",
    "pinecone.*",
    "asyncpg.*",
    "psycopg.*",
    "streamlit.*",
    "gliner.*",
    "pyspark.*",
    "sparknlp.*",
    "stanza.*",
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[project.scripts]
mnemotree = "mnemotree.cli:main"
mnemotree-mcp = "mnemotree.mcp.server:main"
